--- a/unet_env.yaml
+++ b/unet_env.yaml
@@ -1,16 +1,20 @@
 channels:
   - defaults
 dependencies:
+  - python=3.8  # Example: specify Python version 3.8
   - matplotlib=3.6.2
   - numpy=1.23.5
   - pillow=9.3.0
   - tqdm=4.64.1
-  - wandb=0.13.5
   - scipy
-  - opencv-python-headless
-  - logging
-  - tifffile
   - natsort
   - pandas
   - scikit-image
-  - pip
+  - pip:
+    - wandb==0.13.5
+    - opencv-python
+    - logguru
+    - tifffile==2023.7.10
+    - zarr
+# pip install torch==2.3.0+cu121 torchvision==0.18.0+cu121 -f https://download.pytorch.org/whl/cu121/torch_stable.html
+# pip install imutils
